test_regress/t/t_disable.out
%Error-UNSUPPORTED: t/t_disable.v:11:10: Unsupported: disabling fork from within it
   11 |          disable foo;
      |          ^~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_disable.v:17:13: Unsupported: disabling block that contains a fork
   17 |             disable forked;
      |             ^~~~~~~
%Error: Exiting due to
